crates/parser/tests/snapshots/test_function__overloading.snap
---
source: crates/parser/tests/test_function.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: "add",
                        parameters: [
                            Parameter {
                                name: "a",
                                type_ref: Some(
                                    TypeReference {
                                        path: Package {
                                            name: "Integer",
                                            parent: None,
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 2,
                                                start_column: 21,
                                                end_line: 2,
                                                end_column: 27,
                                            },
                                        },
                                        type_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 21,
                                            end_line: 2,
                                            end_column: 27,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    PureOne,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 18,
                                    end_line: 2,
                                    end_column: 18,
                                },
                            },
                        ],
                        return_type: TypeReference {
                            path: Package {
                                name: "Integer",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 34,
                                    end_line: 2,
                                    end_column: 40,
                                },
                            },
                            type_arguments: [],
                            type_variable_values: [],
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 34,
                                end_line: 2,
                                end_column: 40,
                            },
                        },
                        return_multiplicity: PureOne,
                        body: [
                            Variable(
                                Variable {
                                    name: "a",
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 5,
                                        end_line: 4,
                                        end_column: 5,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 8,
                        },
                    },
                ),
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 7,
                                    start_column: 10,
                                    end_line: 7,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: "add",
                        parameters: [
                            Parameter {
                                name: "a",
                                type_ref: Some(
                                    TypeReference {
                                        path: Package {
                                            name: "Integer",
                                            parent: None,
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 7,
                                                start_column: 21,
                                                end_line: 7,
                                                end_column: 27,
                                            },
                                        },
                                        type_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 7,
                                            start_column: 21,
                                            end_line: 7,
                                            end_column: 27,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    PureOne,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 7,
                                    start_column: 18,
                                    end_line: 7,
                                    end_column: 18,
                                },
                            },
                            Parameter {
                                name: "b",
                                type_ref: Some(
                                    TypeReference {
                                        path: Package {
                                            name: "Integer",
                                            parent: None,
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 7,
                                                start_column: 36,
                                                end_line: 7,
                                                end_column: 42,
                                            },
                                        },
                                        type_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 7,
                                            start_column: 36,
                                            end_line: 7,
                                            end_column: 42,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    PureOne,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 7,
                                    start_column: 33,
                                    end_line: 7,
                                    end_column: 33,
                                },
                            },
                        ],
                        return_type: TypeReference {
                            path: Package {
                                name: "Integer",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 7,
                                    start_column: 49,
                                    end_line: 7,
                                    end_column: 55,
                                },
                            },
                            type_arguments: [],
                            type_variable_values: [],
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 7,
                                start_column: 49,
                                end_line: 7,
                                end_column: 55,
                            },
                        },
                        return_multiplicity: PureOne,
                        body: [
                            Arithmetic(
                                ArithmeticExpr {
                                    left: Variable(
                                        Variable {
                                            name: "a",
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 9,
                                                start_column: 5,
                                                end_line: 9,
                                                end_column: 5,
                                            },
                                        },
                                    ),
                                    op: Plus,
                                    right: Variable(
                                        Variable {
                                            name: "b",
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 9,
                                                start_column: 10,
                                                end_line: 9,
                                                end_column: 10,
                                            },
                                        },
                                    ),
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 9,
                                        start_column: 8,
                                        end_line: 9,
                                        end_column: 8,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 7,
                            start_column: 1,
                            end_line: 7,
                            end_column: 8,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
